# search4file

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
PR/crush/: SearchByFileName.py  error.py  readme.md
search4file/: __init__.py
search4file/api/: __init__.py  search4file.py  search_by_content.py  search_by_name.py
search4file/core/: SearchByContent.py  SearchByName.py  __init__.py  byWord.py
search4file/core/SpecialFunc/: SpecialExcel.py  __init__.py
search4file/lib/: unhandle_file_type.py
search4file/lib/decorator/: except_dec.py
search4file/lib/utils/: except_utils.py
tests/: __init__.py  test_search4file.py
tests/docs/: test - 副本 (4).docx  test.docx  test.md  test.pptx  test.xlsx
