[metadata]
name = search4file
version = 0.1.14
description = python for office
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CoderWanFeng/python-office
author = CoderWanFeng
author_email = 1957875073@qq.com
license = Apache-2.0 license
license_file = LICENSE
platforms = any

project_urls =
    Bug Tracker = https://github.com/CoderWanFeng/search4file/issues
    Documentation = https://github.com/CoderWanFeng/search4file/blob/main/README.md
    Source Code = https://github.com/CoderWanFeng/search4file

[options]
packages = find:
install_requires =
    python-docx
    xlrd
    openpyxl
    PyMuPDF
    python-pptx
    tqdm

python_requires = >=3.6
include_package_data = True
zip_safe = False

